[package]
name = "laminar"
version = "0.5.2"
authors = [
    "Lucio Franco <luciofranco14@gmail.com>",
    "Fletcher Haynes <fletcher@capitalprawn.com>",
    "TimonPost <timonpost@hotmail.nl>",
    "Justin LeFebvre <jstnlefebvre@gmail.com>"
] # Given that I've really just been making fields public and stripping
# things I don't use out of the codebase, I don't feel like I belong on this list yet.
description = "A simple semi-reliable UDP protocol for multiplayer games"
keywords = ["gamedev", "networking", "udp", "amethyst"]
categories = ["game-engines", "network-programming"]
exclude = ["examples/*", "docs/*", "benches/*"]

readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/NotGyro/laminar"
autobenches = false
edition = "2018"

[dependencies]
byteorder = "1.4.3"
crc = "1.8"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
rand_pcg = "0.3"

[dev-dependencies]
bincode = "1.3.1"
criterion = "0.3"
serde = "1.0"
serde_derive = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"